--- a/AreaCalculator/Geometry.csproj
+++ b/AreaCalculator/Geometry.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E7D4C44D-B1EF-4E26-8240-915C1DE0BF4B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Geometry</RootNamespace>
+    <RootNamespace>GeometryLibrary</RootNamespace>
     <AssemblyName>Geometry</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Calculators\AreaCalculator.cs" />
     <Compile Include="Calculators\Calculator.cs" />
+    <Compile Include="Geometry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Shapes\Shape.cs" />
