--- a/AreaCalculatorUnitTest/GeometryUnitTest.csproj
+++ b/AreaCalculatorUnitTest/GeometryUnitTest.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AreaCalculatorTests.cs" />
+    <Compile Include="GeometryFacadeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TriangleTests.cs" />
   </ItemGroup>
