--- a/AreaCalculator/Geometry.csproj
+++ b/AreaCalculator/Geometry.csproj
@@ -41,10 +41,13 @@
   <ItemGroup>
     <Compile Include="Calculators\AreaCalculator.cs" />
     <Compile Include="Calculators\Calculator.cs" />
+    <Compile Include="Calculators\PerimeterCalculator.cs" />
     <Compile Include="Geometry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\Circle.cs" />
+    <Compile Include="Shapes\Rectangle.cs" />
     <Compile Include="Shapes\Shape.cs" />
+    <Compile Include="Shapes\Square.cs" />
     <Compile Include="Shapes\Triangle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
