--- a/AreaCalculatorUnitTest/GeometryUnitTest.csproj
+++ b/AreaCalculatorUnitTest/GeometryUnitTest.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="AreaCalculatorTests.cs" />
     <Compile Include="GeometryFacadeTests.cs" />
+    <Compile Include="PerimeterCalculatorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TriangleTests.cs" />
   </ItemGroup>
